--- a/public/barbekyu.html
+++ b/public/barbekyu.html
@@ -85,7 +85,7 @@
         <a href="bezalkoholni.html">БЕЗАЛКОХОЛНИ НАПИТКИ</a>
         <a href="deserti.html">ДЕСЕРТИ</a>
     </nav>
-  </header>`
+  </header>
   <main>
     <section>
     <h2>БАРБЕКЮ</h2>
