adding google location to index page

--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,13 @@
     <p>Изберете категория от менюто по-горе.</p>
       <img src="/assets/logo.png" alt="Лого Хапка" class="logo">
 
+      <section style="margin-top: 40px;">
+        <h3>Къде се намираме:</h3>
+        <div style="width: 100%; max-width: 600px; height: 400px; margin: auto;">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2945.5433208498193!2d27.695747175766453!3d42.416168731555395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40a6c7eb1f2eae55%3A0xb8aaa1040fd5bf41!2z0KDQtdGB0YLQvtGA0LDQvdGCINCl0LDQv9C60LA!5e0!3m2!1sbg!2sbg!4v1751827522995!5m2!1sbg!2sbg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </section>
+
 </body>
 </html>
+
