--- a/public/barbekyu.html
+++ b/public/barbekyu.html
@@ -14,7 +14,7 @@
     main {
       position: relative;
       min-height: calc(100vh - 100px);
-      background-image: url('/assets/barbekyu.png'); /* Replace with actual background */
+      background-image: url('/assets/barbekyu.png');
       background-size: cover;
       background-position: center;
     }
@@ -93,7 +93,7 @@
       <div class="menu-item">
         <h3>Аржентински рибай стек с трюфел пюре и пепър сос</h3>
         <p class="description">(Рибай стек, картофено пюре с пресен трюфел, пепър сос)</p>
-        <p class="price">450гр. — 23.00 € / 45.00 лв.</p>
+        <p class="price">450гр. — 23.46 € / 45.90 лв.</p>
       </div>
       <div class="menu-item">
         <h3>Свински врат (1) (7)</h3>
@@ -113,7 +113,7 @@
       <div class="menu-item">
         <h3>Телешки кюфтета (1)</h3>
         <p class="description">(Бейби картофи, българска разядка, свежа салата)</p>
-        <p class="price">350гр. — 11.19 € / 21.90 лв.</p>
+        <p class="price">350гр. — 11.70 € / 22.90 лв.</p>
       </div>
       <div class="menu-item">
         <h3>Местно плато „Хапка“</h3>
