--- a/public/bira.html
+++ b/public/bira.html
@@ -28,6 +28,7 @@
         }
         section {
             margin-bottom: 40px;
+            margin: 20px;
         }
         h2 {
             font-size: 1.8rem;
@@ -249,22 +250,47 @@
         <div class="menu-item">
             <div class="description">Стралджанска (барел)</div>
             <div class="volume">50мл.</div>
+            <div class="price">3.52 € / 6.90 лв.</div>
+        </div>
+        <div class="menu-item">
+            <div class="description">Сливенска перла</div>
+            <div class="volume">50мл.</div>
             <div class="price">2.30 € / 4.50 лв.</div>
         </div>
         <div class="menu-item">
-            <div class="description">Винена (пъпеш, дюля)</div>
+            <div class="description">Поморийска</div>
             <div class="volume">50мл.</div>
-            <div class="price">2.04 € / 4.00 лв.</div>
+            <div class="price">2.30 € / 4.50 лв.</div>
         </div>
         <div class="menu-item">
-            <div class="description">Айварова</div>
+            <div class="description">Поморийска (МУСКАТОВА, СПЕЦИАЛНА)</div>
             <div class="volume">50мл.</div>
-            <div class="price">2.04 € / 4.00 лв.</div>
+            <div class="price">2.50 € / 4.90 лв.</div>
         </div>
         <div class="menu-item">
-            <div class="description">Домашна</div>
+            <div class="description">Бургаска</div>
             <div class="volume">50мл.</div>
-            <div class="price">2.04 € / 4.00 лв.</div>
+            <div class="price">2.30 € / 4.50 лв.</div>
+        </div>
+        <div class="menu-item">
+            <div class="description">Бургаска (МУСКАТОВА)</div>
+            <div class="volume">50мл.</div>
+            <div class="price">2.50 € / 4.90 лв.</div>
+        </div>
+        <div class="menu-item">
+            <div class="description">Троянска сливова</div>
+            <div class="volume">50мл.</div>
+            <div class="price">2.30 € / 4.50 лв.</div>
+        </div>
+        <div class="menu-item">
+            <div class="description">Бургас 63</div>
+            <div class="volume">50мл.</div>
+            <div class="price">3.01 € / 5.90 лв.</div>
+        </div>
+        <div class="menu-item">
+            <div class="description">Бургас 63 барел</div>
+            <div class="volume">50мл.</div>
+            <div class="price">3.52 € / 6.90 лв.</div>
         </div>
     </section>
 
